# tokenize-stack

./: .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  LIMITATIONS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  smoke.yml
console/: index.html  nginx.conf
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: CashToken.sol  ComplianceRegistry.sol  CouponDistributor.sol  DvPEscrow.sol  RestrictedAssetToken.sol  SimpleERC20.sol
contracts/test/: CouponDistributor.t.sol  DvPEscrow.t.sol  RestrictedAssetToken.t.sol
scenarios/: demo.yaml  failures.yaml
services/: __init__.py
services/auditlog/: __init__.py  verifier.py
services/auditlog/app/: __init__.py  main.py
services/common/: __init__.py  audit.py  audit_client.py  chain.py  deployment.py  models.py  personas.py  state.py
services/custody/: __init__.py  actions.py  policy.py  signer.py  store.py
services/custody/app/: __init__.py  main.py
services/custody/policies/: policy.yaml
services/recon/: __init__.py  report.py
services/recon/app/: __init__.py  main.py
services/settlement/: __init__.py  store.py
services/settlement/app/: __init__.py  main.py
stackctl/: __init__.py  __main__.py  cli.py  scenarios.py  sim.py  stack.py
tests/: test_approvals.py  test_auditlog.py  test_policy.py  test_scenarios.py  test_signer.py
